  Features:
    - It is now possible to set which qualities a trade can use.
    - Added trade overview filters for maximum number of input and output items in trades.
    - Added trade overview filter for maximum number of trades to be shown.
        Helps with UPS if you specify enough filters to not have to search countless trades.
    - Added mod setting to change the shapes of ore patches.
    - Added deathworld settings.
  Minor Features:
    - Added mod settings for personally turning certain notifications in chat on or off.
  Gui:
    - Improved hex core trade UI.
    - Made the planet filter buttons in the trade overview more compact.
    - Changed core deletion button sprite to a trash can.
  Bugfixes:
    - Fixed that some coin sprites would have tooltips with non-integer values while viewing higher quality trades in hex cores.
    - Fixed that hextreme quality was not decreasing the power consumption of beacons like other qualities do.
    - Fixed range of entity removal when hex cores spawn.
    - Fixed that the Quantum Bazaar wasn't allowing to trade interplanetary items.
    - Fixed that extra trades from bonze and silver rank items' bonus effects never involved coins.
  Changes:
    - Clicking on a GPS tag in chat no longer opens pinged hex cores.
    - Changed Sentient Spider inventory size to 120 (50% higher than spidertron).
  Balancing:
    - Made the Lazy Looter quest reward give a rare [item=spidertron] instead of normal, as well as equipment to go with it.
  Ease of use:
    - Clicking on the "find trade" button in the trade overview now immediately takes your remote view to the relevant hex core and opens it up for you.
    - Output loaders of hex cores can now be clicked directly to set their filters rather than having to go through the hex core interface.
---------------------------------------------------------------------------------------------------
Version: 0.4.3
Date: 6/6/25
  Major Features:
    - Added dungeons.
  Features: