@@ -168,10 +168,8 @@ hextorio-resource-bias=Resource Bias
 hextorio-resource-bias-variation=Bias Variation
 hextorio-interplanetary-mult=Interplanetary Multiplier
 hextorio-interplanetary-mult-aquilo=[planet=aquilo] Interplanetary Multiplier
-hextorio-rank-2-effect=Bronze Rank Effect
-hextorio-rank-3-effect=Silver Rank Effect
-hextorio-rank-4-effect=Gold Rank Effect
-hextorio-rank-5-effect=Red Rank Effect
+hextorio-rank-2-effect=[img=bronze-star] Bronze Rank Effect
+hextorio-rank-3-effect=[img=silver-star] Silver Rank Effect
 hextorio-supercharge-cost-per-tile=Supercharge Cost Per Tile
 hextorio-supercharge-cost-per-well=Supercharge Cost Per Well
 hextorio-supercharge-cost-multiplier=Supercharge Cost Multiplier
@@ -273,6 +271,7 @@ hextorio-resource-bias-variation=Whether the strength of bias is randomized up (
 hextorio-interplanetary-mult=The multiplier on item values when they are traded between planets.
 hextorio-interplanetary-mult-aquilo=The multiplier on item values when they are sent to [planet=aquilo] from other planets.
 hextorio-rank-2-effect=The percentage that the [img=rank-2] bronze item rank bonus uses (shown in the catalog when a bronze star item is selected).
+hextorio-rank-3-effect=The number of trades that the [img=rank-3] silver item rank bonus generates on each planet (shown in the catalog when a silver star item is selected).
 hextorio-supercharge-cost-per-tile=Cost per resource tile to supercharge all resources in a hex, making them infinite.
 hextorio-supercharge-cost-per-well=Cost per resource well to supercharge all resources in a hex, making them infinite.
 hextorio-supercharge-cost-multiplier=Overall multiplier of cost to supercharge resources.
