@@ -7,6 +7,15 @@ data:extend({
         default_value = 0.01,
         minimum_value = 0,
         maximum_value = 1.0,
-        order = "ra",
+        order = "t[ranks]-k[effect-2]",
+    },
+    {
+        type = "int-setting",
+        name = "hextorio-rank-3-effect",
+        setting_type = "runtime-global",
+        default_value = 1,
+        minimum_value = 0,
+        maximum_value = 100,
+        order = "t[ranks]-k[effect-3]",
     },
 })
