@@ -7,9 +7,10 @@ Date: 9/6/25
     - Added trade overview filter for maximum number of trades to be shown.
         Helps with UPS if you specify enough filters to not have to search countless trades.
     - Added mod setting to change the shapes of ore patches.
-    - Added deathworld settings.
+    - Added mod setting for deathworld playthroughs.
   Minor Features:
     - Added mod settings for personally turning certain notifications in chat on or off.
+    - Added mod setting to change the impact of the silver rank bonus effect.
   Gui:
     - Improved hex core trade UI.
     - Made the planet filter buttons in the trade overview more compact.
